--- a/app/src/main/res/layout/activity_medication_list.xml
+++ b/app/src/main/res/layout/activity_medication_list.xml
@@ -2,7 +2,6 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/fab_add_medicine"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.MedicationListActivity">
@@ -17,13 +16,13 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floatingActionButton"
+        android:id="@+id/fab_add_medicine"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="24dp"
-        app:tint="@color/gray_700"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/ic_baseline_add_shopping_cart_24" />
+        app:srcCompat="@drawable/ic_baseline_add_shopping_cart_24"
+        app:tint="@color/gray_700" />
 </androidx.constraintlayout.widget.ConstraintLayout>
