--- a/app/src/main/res/layout/activity_medicine.xml
+++ b/app/src/main/res/layout/activity_medicine.xml
@@ -7,46 +7,14 @@
     tools:context=".activities.MedicineActivity">
 
     <TextView
-        android:id="@+id/label_manufacture_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="32dp"
-        android:text="@string/manufacture"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/manufacture_card"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:elevation="10dp"
-        app:cardCornerRadius="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/label_manufacture_name">
-
-        <EditText
-            android:id="@+id/edit_manufacture_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:inputType="textPersonName"
-            tools:text="Производитель лекарства" />
-    </androidx.cardview.widget.CardView>
-
-    <TextView
         android:id="@+id/label_medicine_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="24dp"
         android:text="@string/name"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/manufacture_card" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/medicine_card"
@@ -59,7 +27,7 @@
         app:cardCornerRadius="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/label_medicine_name">
+        app:layout_constraintTop_toBottomOf="@id/label_medicine_name">
 
         <EditText
             android:id="@+id/edit_medicine_name"
@@ -67,7 +35,52 @@
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:inputType="textPersonName"
-            tools:text="Производитель лекарства" />
+            tools:text="Наименование лекарства" />
+    </androidx.cardview.widget.CardView>
+
+    <TextView
+        android:id="@+id/label_manufacturer_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/manufacturer"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/medicine_card" />
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/manufacturer_card"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:elevation="10dp"
+        app:cardCornerRadius="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/label_manufacturer_name">
+
+        <TextView
+            android:id="@+id/selected_manufacturer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
+            android:text="@string/select_manufacturer"
+            android:textSize="18sp" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab_add_manufacturer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:layout_margin="8dp"
+            android:src="@drawable/ic_baseline_add_24"
+            app:fabSize="mini"
+            app:tint="@color/gray_700" />
     </androidx.cardview.widget.CardView>
 
     <TextView
@@ -78,7 +91,7 @@
         android:layout_marginTop="16dp"
         android:text="@string/group"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/medicine_card" />
+        app:layout_constraintTop_toBottomOf="@+id/manufacturer_card" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/group_card"
@@ -116,20 +129,20 @@
     </androidx.cardview.widget.CardView>
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/label_manufacture_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
         android:text="@string/manufacture_date"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/group_card" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/label_expiration_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
         android:text="@string/expiration_date"
         app:layout_constraintEnd_toEndOf="parent"
@@ -141,17 +154,17 @@
         android:layout_marginTop="16dp"
         android:elevation="10dp"
         app:cardCornerRadius="10dp"
-        app:layout_constraintEnd_toEndOf="@+id/textView3"
-        app:layout_constraintStart_toStartOf="@+id/textView3"
-        app:layout_constraintTop_toBottomOf="@+id/textView3">
+        app:layout_constraintEnd_toEndOf="@+id/label_manufacture_date"
+        app:layout_constraintStart_toStartOf="@+id/label_manufacture_date"
+        app:layout_constraintTop_toBottomOf="@+id/label_manufacture_date">
 
         <TextView
-            android:id="@+id/textView5"
+            android:id="@+id/manufacture_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="16dp"
-            tools:text="12.2020" />
+            android:text="@string/select" />
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
@@ -161,21 +174,21 @@
         android:layout_marginTop="16dp"
         android:elevation="10dp"
         app:cardCornerRadius="10dp"
-        app:layout_constraintEnd_toEndOf="@+id/textView4"
-        app:layout_constraintStart_toStartOf="@+id/textView4"
-        app:layout_constraintTop_toBottomOf="@+id/textView4">
+        app:layout_constraintEnd_toEndOf="@+id/label_expiration_date"
+        app:layout_constraintStart_toStartOf="@+id/label_expiration_date"
+        app:layout_constraintTop_toBottomOf="@+id/label_expiration_date">
 
         <TextView
-            android:id="@+id/textView6"
+            android:id="@+id/expiration_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="16dp"
-            tools:text="01.2023" />
+            android:text="@string/select" />
     </androidx.cardview.widget.CardView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floatingActionButton2"
+        android:id="@+id/fab_save_medicine"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="24dp"
