--- a/app/src/main/res/layout/item_group_and_manuf.xml
+++ b/app/src/main/res/layout/item_group_and_manuf.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/group_name"
+        android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
@@ -17,7 +17,7 @@
         tools:text="Имя группы" />
 
     <ImageButton
-        android:id="@+id/i_btn_edit_group_name"
+        android:id="@+id/i_btn_edit_name"
         style="@style/Widget.MaterialComponents.FloatingActionButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
