--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,12 @@
 
     <color name="gray_100">#f5f5f5</color>
     <color name="gray_700">#616161</color>
-    <color name="light_green_a_200">#b2ff59</color>
-    <color name="light_green_a_200_dark">#7ecb20</color>
+    <color name="light_green_A200">#b2ff59</color>
+    <color name="light_green_A200_dark">#7ecb20</color>
+    <color name="red_A700">#d50000</color>
+    <color name="orange_A700">#ff6d00</color>
+
+    <color name="danger">@color/red_A700</color>
+    <color name="warning">@color/orange_A700</color>
+    <color name="good">@color/light_green_A200</color>
 </resources>
