--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,11 +2,11 @@
     <!-- Base application theme. -->
     <style name="Theme.FirstAidKit" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/light_green_a_200</item>
-        <item name="colorPrimaryVariant">@color/light_green_a_200_dark</item>
+        <item name="colorPrimary">@color/light_green_A200</item>
+        <item name="colorPrimaryVariant">@color/light_green_A200_dark</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/light_green_a_200</item>
+        <item name="colorSecondary">@color/light_green_A200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
