--- a/app/src/main/res/layout/activity_medicine.xml
+++ b/app/src/main/res/layout/activity_medicine.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/light_green_100"
     tools:context=".activities.MedicineActivity">
 
     <TextView
@@ -25,6 +26,7 @@
         android:layout_marginEnd="8dp"
         android:elevation="10dp"
         app:cardCornerRadius="10dp"
+        app:cardBackgroundColor="@color/light_green_50"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/label_medicine_name">
@@ -54,6 +56,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        app:cardBackgroundColor="@color/light_green_50"
         android:layout_marginEnd="8dp"
         android:elevation="10dp"
         app:cardCornerRadius="10dp"
@@ -100,6 +103,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        app:cardBackgroundColor="@color/light_green_50"
         android:elevation="10dp"
         app:cardCornerRadius="10dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -153,6 +157,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:elevation="10dp"
+        app:cardBackgroundColor="@color/light_green_50"
         app:cardCornerRadius="10dp"
         app:layout_constraintEnd_toEndOf="@+id/label_manufacture_date"
         app:layout_constraintStart_toStartOf="@+id/label_manufacture_date"
@@ -174,6 +179,7 @@
         android:layout_marginTop="16dp"
         android:elevation="10dp"
         app:cardCornerRadius="10dp"
+        app:cardBackgroundColor="@color/light_green_50"
         app:layout_constraintEnd_toEndOf="@+id/label_expiration_date"
         app:layout_constraintStart_toStartOf="@+id/label_expiration_date"
         app:layout_constraintTop_toBottomOf="@+id/label_expiration_date">
