--- a/app/src/main/res/layout/item_group_and_manuf.xml
+++ b/app/src/main/res/layout/item_group_and_manuf.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/light_green_50"
     android:layout_height="wrap_content">
 
     <TextView
