--- a/app/src/main/res/layout/item_medicine.xml
+++ b/app/src/main/res/layout/item_medicine.xml
@@ -6,6 +6,7 @@
     android:layout_margin="8dp"
     android:elevation="10dp"
     app:cardCornerRadius="10dp"
+    app:cardBackgroundColor="@color/light_green_50"
     xmlns:tools="http://schemas.android.com/tools">
     <LinearLayout
         android:layout_width="match_parent"
