--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,10 @@
 
     <color name="gray_100">#f5f5f5</color>
     <color name="gray_700">#616161</color>
+    <color name="light_green_50">#F1F8E9</color>
+    <color name="light_green_100">#DCEDC8</color>
+    <color name="light_green_700">#689F38</color>
+    <color name="light_green_800">#558B2F</color>
     <color name="light_green_A200">#b2ff59</color>
     <color name="light_green_A200_dark">#7ecb20</color>
     <color name="red_A700">#d50000</color>
@@ -17,5 +21,5 @@
 
     <color name="danger">@color/red_A700</color>
     <color name="warning">@color/orange_A700</color>
-    <color name="good">@color/light_green_A200</color>
+    <color name="good">@color/light_green_A200_dark</color>
 </resources>
