--- a/app/src/main/res/layout/activity_medicine.xml
+++ b/app/src/main/res/layout/activity_medicine.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/light_green_100"
+    android:background="@color/background_color"
     tools:context=".activities.MedicineActivity">
 
     <TextView
@@ -14,6 +14,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="24dp"
         android:text="@string/name"
+        android:textColor="@color/text_color"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -25,8 +26,8 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:elevation="10dp"
+        app:cardBackgroundColor="@color/card_color"
         app:cardCornerRadius="10dp"
-        app:cardBackgroundColor="@color/light_green_50"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/label_medicine_name">
@@ -37,6 +38,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:inputType="textPersonName"
+            android:textColor="@color/text_color"
             tools:text="Наименование лекарства" />
     </androidx.cardview.widget.CardView>
 
@@ -47,6 +49,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
         android:text="@string/manufacturer"
+        android:textColor="@color/text_color"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/medicine_card" />
 
@@ -56,9 +59,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        app:cardBackgroundColor="@color/light_green_50"
         android:layout_marginEnd="8dp"
         android:elevation="10dp"
+        app:cardBackgroundColor="@color/card_color"
         app:cardCornerRadius="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -73,6 +76,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginBottom="16dp"
             android:text="@string/select_manufacturer"
+            android:textColor="@color/text_color"
             android:textSize="18sp" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -83,7 +87,7 @@
             android:layout_margin="8dp"
             android:src="@drawable/ic_baseline_add_24"
             app:fabSize="mini"
-            app:tint="@color/gray_700" />
+            app:tint="@color/fab_icon_color" />
     </androidx.cardview.widget.CardView>
 
     <TextView
@@ -93,6 +97,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
         android:text="@string/group"
+        android:textColor="@color/text_color"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/manufacturer_card" />
 
@@ -103,8 +108,8 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        app:cardBackgroundColor="@color/light_green_50"
         android:elevation="10dp"
+        app:cardBackgroundColor="@color/card_color"
         app:cardCornerRadius="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -119,6 +124,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginBottom="16dp"
             android:text="@string/select_group"
+            android:textColor="@color/text_color"
             android:textSize="18sp" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -129,7 +135,7 @@
             android:layout_margin="8dp"
             android:src="@drawable/ic_baseline_add_24"
             app:fabSize="mini"
-            app:tint="@color/gray_700" />
+            app:tint="@color/fab_icon_color" />
     </androidx.cardview.widget.CardView>
 
     <TextView
@@ -139,6 +145,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
         android:text="@string/manufacture_date"
+        android:textColor="@color/text_color"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/group_card" />
 
@@ -149,15 +156,17 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
         android:text="@string/expiration_date"
+        android:textColor="@color/text_color"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/group_card" />
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/manufacture_date_card"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:elevation="10dp"
-        app:cardBackgroundColor="@color/light_green_50"
+        app:cardBackgroundColor="@color/card_color"
         app:cardCornerRadius="10dp"
         app:layout_constraintEnd_toEndOf="@+id/label_manufacture_date"
         app:layout_constraintStart_toStartOf="@+id/label_manufacture_date"
@@ -169,17 +178,18 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="16dp"
-            android:text="@string/select" />
+            android:text="@string/select"
+            android:textColor="@color/text_color" />
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/cardView2"
+        android:id="@+id/expiration_date_card"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:elevation="10dp"
+        app:cardBackgroundColor="@color/card_color"
         app:cardCornerRadius="10dp"
-        app:cardBackgroundColor="@color/light_green_50"
         app:layout_constraintEnd_toEndOf="@+id/label_expiration_date"
         app:layout_constraintStart_toStartOf="@+id/label_expiration_date"
         app:layout_constraintTop_toBottomOf="@+id/label_expiration_date">
@@ -190,7 +200,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="16dp"
-            android:text="@string/select" />
+            android:text="@string/select"
+            android:textColor="@color/text_color" />
     </androidx.cardview.widget.CardView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -202,5 +213,5 @@
         android:src="@drawable/ic_baseline_save_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:tint="@color/gray_700" />
+        app:tint="@color/fab_icon_color" />
 </androidx.constraintlayout.widget.ConstraintLayout>
