--- a/app/src/main/res/layout/dialog_select_date.xml
+++ b/app/src/main/res/layout/dialog_select_date.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/background_color">
 
     <TextView
         android:id="@+id/title"
@@ -10,6 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:text="@string/select_date"
+        android:textColor="@color/text_color"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -37,7 +39,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginBottom="8dp"
-                android:text="@string/month" />
+                android:text="@string/month"
+                android:textColor="@color/text_color" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/month_recycler"
@@ -57,7 +60,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginBottom="8dp"
-                android:text="@string/year" />
+                android:text="@string/year"
+                android:textColor="@color/text_color" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/year_recycler"
