--- a/app/src/main/res/layout/item_medicine.xml
+++ b/app/src/main/res/layout/item_medicine.xml
@@ -1,53 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="8dp"
     android:elevation="10dp"
-    app:cardCornerRadius="10dp"
-    app:cardBackgroundColor="@color/light_green_50"
-    xmlns:tools="http://schemas.android.com/tools">
+    app:cardBackgroundColor="@color/card_color"
+    app:cardCornerRadius="10dp">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="16dp"
         android:orientation="vertical">
+
         <TextView
+            android:id="@+id/medicine_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:text="Наименование лекарства"
-            android:textStyle="bold"
+            android:textColor="@color/text_color"
             android:textSize="16sp"
-            android:id="@+id/medicine_name"/>
+            android:textStyle="bold"
+            tools:text="Наименование лекарства" />
+
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <TextView
+                android:id="@+id/manufacture_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:text="Дата изг. 06.2020"
-                android:id="@+id/manufacture_date"/>
+                android:textColor="@color/text_color"
+                tools:text="Дата изг. 06.2020" />
+
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                tools:text="Дата оконч. 06.2022"
                 android:id="@+id/expiration_date"
-                android:layout_gravity="end"/>
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:textColor="@color/text_color"
+                tools:text="Дата оконч. 06.2022" />
         </FrameLayout>
+
         <ProgressBar
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:max="100"
-            android:progress="40"
-            android:indeterminate="false"
+            android:id="@+id/progress_date"
             style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-            android:id="@+id/progress_date"/>
-        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:text="Оставшийся срок годности"
-            android:id="@+id/message"/>
+            android:indeterminate="false"
+            android:max="100"
+            android:progress="40" />
+
+        <TextView
+            android:id="@+id/message"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/text_color"
+            tools:text="Оставшийся срок годности" />
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
