--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,4 +22,10 @@
     <color name="danger">@color/red_A700</color>
     <color name="warning">@color/orange_A700</color>
     <color name="good">@color/light_green_A200_dark</color>
+
+    <color name="background_color">@color/light_green_100</color>
+    <color name="card_color">@color/light_green_50</color>
+    <color name="fab_color">@color/light_green_50</color>
+    <color name="fab_icon_color">@color/gray_700</color>
+    <color name="text_color">@color/gray_700</color>
 </resources>
